--- a/src/app/features/page/Home/home/home.component.scss
+++ b/src/app/features/page/Home/home/home.component.scss
@@ -4,6 +4,8 @@
 
  }
 
+ //Waves
+
  .waves-back {
      width: 100%;
      position: absolute;
@@ -23,6 +25,63 @@
      height: 100%;
      z-index: -10;
  }
+
+//Columns
+
+
+.wrapper-columns {
+   padding: 5px;
+   max-width: 960px;
+   width: 95%;
+   margin: 20px auto;
+}
+
+
+.columns {
+   display: flex;
+   flex-flow: row wrap;
+   justify-content: center;
+   margin: 5px 0;
+}
+
+.column {
+   flex: 1;
+   margin: 2px;
+   padding: 10px;
+
+   &:first-child {
+      margin-left: 0;
+   }
+
+   &:last-child {
+      margin-right: 0;
+   }
+
+}
+
+
+@media screen and (max-width: 980px) {
+   .columns .column {
+      margin-bottom: 5px;
+      flex-basis: 40%;
+
+      &:nth-last-child(2) {
+         margin-right: 0;
+      }
+
+      &:last-child {
+         flex-basis: 100%;
+         margin: 0;
+      }
+   }
+}
+
+@media screen and (max-width: 680px) {
+   .columns .column {
+      flex-basis: 100%;
+      margin: 0 0 5px 0;
+   }
+}
 
 // Services
 
@@ -102,7 +161,7 @@
 
 .ours{
    background-color: #FCBD07;
-   border-radius: 24px;
+   border-radius: 100px;
 }
 
 //Contact
@@ -113,7 +172,7 @@ form {
 }
 
 .feedback-input {
-   color: white;
+   color: black;
    font-family: Helvetica, Arial, sans-serif;
    font-weight: 500;
    font-size: 18px;
