--- a/src/app/features/page/Portafolio/portafolio/portafolio.component.html
+++ b/src/app/features/page/Portafolio/portafolio/portafolio.component.html
@@ -1,1 +1,111 @@
-<p>portafolio works!</p>
+<section class="portafolio">
+    <br>
+
+<div class="wrapper-columns">
+
+    <div class="columns">
+
+        <div class="column">
+            <br><br><br><br><br>
+            <h1 style="font-size: 70px;">Portafolio</h1>
+            <br><br>
+            
+
+        </div>
+
+        <div class="column">
+            <figure class="figure">
+                <div class="text-center">
+
+
+                    <img src="https://image.spreadshirtmedia.net/image-server/v1/products/T1599A1PA5076PT10X15Y12D173444457W3575H4290/views/1,width=378,height=378,appearanceId=1,backgroundColor=F2F2F2/bebe-t-rex-kawaii-dinosaurio-regalo.jpg"
+                        class="figure-img img-fluid rounded texte-center"
+                        alt="A generic square placeholder image with rounded corners in a figure.">
+                </div>
+            </figure>
+
+        </div>
+
+    </div>
+
+</div>
+    
+
+        <div class="wrapper-portafolio">
+            <div class="cols">
+                <div class="col" ontouchstart="this.classList.toggle('hover');">
+                    <div class="container-portafolio">
+                        <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
+                            <div class="inner">
+                                <p>Nombre del portafolio</p>
+                                <span>Compania</span>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="inner">
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae
+                                    suscipit c.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="cols">
+                <div class="col" ontouchstart="this.classList.toggle('hover');">
+                    <div class="container-portafolio">
+                        <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
+                            <div class="inner">
+                                <p>Nombre del portafolio</p>
+                                <span>Compania</span>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="inner">
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae
+                                    suscipit c.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="cols">
+                <div class="col" ontouchstart="this.classList.toggle('hover');">
+                    <div class="container-portafolio">
+                        <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
+                            <div class="inner">
+                                <p>Nombre del portafolio</p>
+                                <span>Compania</span>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="inner">
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae
+                                    suscipit c.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="cols">
+                <div class="col" ontouchstart="this.classList.toggle('hover');">
+                    <div class="container-portafolio">
+                        <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
+                            <div class="inner">
+                                <p>Nombre del portafolio</p>
+                                <span>Compania</span>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="inner">
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae
+                                    suscipit c.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    
+
+</section>
