--- a/src/app/Shared/header/header.component.scss
+++ b/src/app/Shared/header/header.component.scss
@@ -5,9 +5,12 @@
 nav {
     margin-top: 1%;
     position: relative;
-    width: 500px;
     background-color: #FCBD07;
     border-radius: 50px;
+    @media(max-width: 450px) {
+            flex-flow: column wrap;
+            /*4*/
+        }
 
     z-index: 2;
 }
@@ -48,3 +51,5 @@ h1 {
     font-size: 30px;
     color: #000000;
 }
+
+
