--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -1,36 +1,47 @@
-<div class="waves-back" >
+<!-- <div class="waves-back" >
 
     <iframe class="frame-back" src="https://streamable.com/e/zxcjcw?autoplay=1&nocontrols=1" frameborder="0" width="100%"
         height="100%" allowfullscreen allow="autoplay"></iframe>
 
-        </div>
-
+        </div> -->
 
 
 <section class="home-section">
     <br><br>
-    
-        <div class="row justify-content-evenly">
+        <div class="wrapper-columns">
+        
+            <div class="columns">
+        
+                <div class="column">
+                    <p style="font-size:35px;">Lorem ipsum dolor sit amet consectetur adipiscing elit elementum, dictum
+                        porttitor sed morbi laoreet aliquam cras nostra
+                        tincidunt, enim aenean phasellus sapien auctor curae ultrices. Orci cubilia rutrum id commodo hendrerit
+                        enim sagittis
+                        neque nullam, vehicula leo pharetra potenti metus diam vel maecenas, netus senectus feugiat sollicitudin
+                        blandit
+                        ullamcorper fermentdum curabitur</p>
+                </div>
+        
+                <div class="column">
+                    <figure class="figure">
+                        <div class="text-center">
 
-            <div class="col-4">
+                        
+                        <img src="https://www.lavanguardia.com/files/content_image_mobile_filter/uploads/2016/11/10/5fa2f87913ea9.jpeg" class="figure-img img-fluid rounded"
+                            alt="A generic square placeholder image with rounded corners in a figure.">
+                            </div>
+                    </figure>
 
-                <p style="font-size: 35px;">Lorem ipsum dolor sit amet consectetur adipiscing elit elementum, dictum porttitor sed morbi laoreet aliquam cras nostra
-                tincidunt, enim aenean phasellus sapien auctor curae ultrices. Orci cubilia rutrum id commodo hendrerit enim sagittis
-                neque nullam, vehicula leo pharetra potenti metus diam vel maecenas, netus senectus feugiat sollicitudin blandit
-                ullamcorper fermentum curabitur</p>
+                </div>
+        
             </div>
-
-            <div class="col-4">
-                <img src="" class="rounded float-end" alt="...">
-            </div>
-
+        
         </div>
-
-
 </section>
 <br><br>
 
 <section class="services-section">
+
     <div>
         <h1 class="text-center">Servicios</h1> <br>
     </div>
@@ -108,6 +119,7 @@
 
 <br><br>
 <section class="ours">
+    
 
         <br><h1 class="text-center">Nosotros</h1> <br>
 
@@ -116,6 +128,13 @@
         sollicitudin accumsan ad, nibh pharetra habitant parturient aliquam massa aptent est. Suspendisse eget lacinia non
         nullam eros elementum vel posuere, natoque aenean libero volutpat ultricies duis.</p>
         <br>
+        <p class="text-center" style="font-size: 40px;">Lorem ipsum dolor sit amet consectetur adipiscing elit bibendum, augue
+            condimentum ultrices a malesuada volutpat duis
+            mus curae, suspendisse scelerisque integer fermentum ligula potenti rutrum. Eros vel neque ornare egestas potenti
+            purus
+            sollicitudin accumsan ad, nibh pharetra habitant parturient aliquam massa aptent est. Suspendisse eget lacinia non
+            nullam eros elementum vel posuere, natoque aenean libero volutpat ultricies duis.</p>
+            <br>
 
 </section>
 <br><br>
