--- a/src/app/features/page/Portafolio/portafolio/portafolio.component.html
+++ b/src/app/features/page/Portafolio/portafolio/portafolio.component.html
@@ -7,7 +7,7 @@
 
         <div class="column">
             <br><br><br><br><br>
-            <h1 style="font-size: 70px;">Portafolio</h1>
+            <h1 style="font-size: 70px;">Portafolio ah ah ah</h1>
             <br><br>
             
 
