--- a/src/app/Shared/header/header.component.scss
+++ b/src/app/Shared/header/header.component.scss
@@ -8,8 +8,8 @@ nav {
     background-color: #FCBD07;
     border-radius: 50px;
     @media(max-width: 450px) {
+            margin-top: 40px;
             flex-flow: column wrap;
-            /*4*/
         }
 
     z-index: 2;
@@ -26,23 +26,18 @@ nav a {
     text-align: center;
     color: black;
     cursor: pointer;
+    width: 100px;
+
+    @media(max-width: 450px) {
+            flex-flow: column wrap;
+            width: 90px;
+        }
 }
 
-a:nth-child(1) {
-    width: 100px;
-}
 
-a:nth-child(2) {
-    width: 100px;
-}
 
-a:nth-child(3) {
-    width: 100px;
-}
 
-a:nth-child(4) {
-    width: 100px;
-}
+
 
 h1 {
     text-align: center;
