--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -1,13 +1,13 @@
-<!-- <div class="waves-back" >
+<div class="waves-back" >
 
     <iframe class="frame-back" src="https://streamable.com/e/zxcjcw?autoplay=1&nocontrols=1" frameborder="0" width="100%"
         height="100%" allowfullscreen allow="autoplay"></iframe>
 
-        </div> -->
+        </div>
 
 
 <section class="home-section">
-    <br><br>
+    <br>
         <div class="wrapper-columns">
         
             <div class="columns">
@@ -49,66 +49,66 @@
         <div class="card-grid">
             <li class="card-services"  >
                 <div class="card__background"
-                    style="background-image: url(https://images.unsplash.com/photo-1557177324-56c542165309?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
+                    style="background-image: url(https://astralmoney.com/wp-content/uploads/2020/07/Captura-de-pantalla-2019-05-18-a-las-16.11.59.png)">
                 </div>
                 <div class="card__content">
-                    <h3 class="card__heading">Example Card Heading</h3>
+                    <h3 class="card__heading text-center">Diseño Gráfico</h3>
                 </div>
             </li>
             <li class="card-services"  >
                 <div class="card__background"
-                    style="background-image: url(https://images.unsplash.com/photo-1557177324-56c542165309?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
+                    style="background-image: url(https://astralmoney.com/wp-content/uploads/2020/07/Captura-de-pantalla-2019-05-18-a-las-16.11.59.png)">
                 </div>
                 <div class="card__content">
-                    <h3 class="card__heading">Example Card Heading</h3>
+                    <h3 class="card__heading text-center">Marketing Digital</h3>
                 </div>
             </li>
             <li class="card-services"  >
                 <div class="card__background"
-                    style="background-image: url(https://images.unsplash.com/photo-1557177324-56c542165309?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
+                    style="background-image: url(https://astralmoney.com/wp-content/uploads/2020/07/Captura-de-pantalla-2019-05-18-a-las-16.11.59.png)">
                 </div>
                 <div class="card__content">
-                    <h3 class="card__heading">Example Card Heading</h3>
+                    <h3 class="card__heading text-center">Marketing Tradicional</h3>
                 </div>
             </li>
             <li class="card-services"  >
                 <div class="card__background"
-                    style="background-image: url(https://images.unsplash.com/photo-1557177324-56c542165309?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
+                    style="background-image: url(https://astralmoney.com/wp-content/uploads/2020/07/Captura-de-pantalla-2019-05-18-a-las-16.11.59.png)">
                 </div>
                 <div class="card__content">
-                    <h3 class="card__heading">Example Card Heading</h3>
+                    <h3 class="card__heading text-center">Diseño Web</h3>
                 </div>
             </li>
             <li class="card-services"  >
                 <div class="card__background"
-                    style="background-image: url(https://images.unsplash.com/photo-1557177324-56c542165309?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
+                    style="background-image: url(https://astralmoney.com/wp-content/uploads/2020/07/Captura-de-pantalla-2019-05-18-a-las-16.11.59.png)">
                 </div>
                 <div class="card__content">
-                    <h3 class="card__heading">Example Card Heading</h3>
+                    <h3 class="card__heading text-center">Diseño Web</h3>
                 </div>
             </li>
             <li class="card-services"  >
                 <div class="card__background"
-                    style="background-image: url(https://images.unsplash.com/photo-1557177324-56c542165309?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
+                    style="background-image: url(https://astralmoney.com/wp-content/uploads/2020/07/Captura-de-pantalla-2019-05-18-a-las-16.11.59.png)">
                 </div>
                 <div class="card__content">
-                    <h3 class="card__heading">Example Card Heading</h3>
+                    <h3 class="card__heading text-center">Hosting</h3>
                 </div>
             </li>
             <li class="card-services"  >
                 <div class="card__background"
-                    style="background-image: url(https://images.unsplash.com/photo-1557177324-56c542165309?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
+                    style="background-image: url(https://astralmoney.com/wp-content/uploads/2020/07/Captura-de-pantalla-2019-05-18-a-las-16.11.59.png)">
                 </div>
                 <div class="card__content">
-                    <h3 class="card__heading">Example Card Heading</h3>
+                    <h3 class="card__heading text-center">Impresión</h3>
                 </div>
             </li>
             <li class="card-services"  >
                 <div class="card__background"
-                    style="background-image: url(https://images.unsplash.com/photo-1557177324-56c542165309?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
+                    style="background-image: url(https://astralmoney.com/wp-content/uploads/2020/07/Captura-de-pantalla-2019-05-18-a-las-16.11.59.png)">
                 </div>
                 <div class="card__content">
-                    <h3 class="card__heading">Example Card Heading</h3>
+                    <h3 class="card__heading text-center">Ambientación de espacios comerciales.</h3>
                 </div>
             </li>
         </div>
@@ -123,12 +123,12 @@
 
         <br><h1 class="text-center">Nosotros</h1> <br>
 
-        <p class="text-center" style="font-size: 40px;">Lorem ipsum dolor sit amet consectetur adipiscing elit bibendum, augue condimentum ultrices a malesuada volutpat duis
+        <p class="text-center text-ours" >Lorem ipsum dolor sit amet consectetur adipiscing elit bibendum, augue condimentum ultrices a malesuada volutpat duis
         mus curae, suspendisse scelerisque integer fermentum ligula potenti rutrum. Eros vel neque ornare egestas potenti purus
         sollicitudin accumsan ad, nibh pharetra habitant parturient aliquam massa aptent est. Suspendisse eget lacinia non
         nullam eros elementum vel posuere, natoque aenean libero volutpat ultricies duis.</p>
         <br>
-        <p class="text-center" style="font-size: 40px;">Lorem ipsum dolor sit amet consectetur adipiscing elit bibendum, augue
+        <p class="text-center text-ours" >Lorem ipsum dolor sit amet consectetur adipiscing elit bibendum, augue
             condimentum ultrices a malesuada volutpat duis
             mus curae, suspendisse scelerisque integer fermentum ligula potenti rutrum. Eros vel neque ornare egestas potenti
             purus
