initial contact page

--- a/src/app/features/page/Contact/contact/contact.component.html
+++ b/src/app/features/page/Contact/contact/contact.component.html
@@ -1,1 +1,13 @@
-<p>contact works!</p>
+<br><br>
+<section class="contact">
+    <h1 class="text-center">Contacto</h1> <br>
+
+    <form>
+        <input name="name" type="text" class="feedback-input" placeholder="Name" />
+        <input name="email" type="text" class="feedback-input" placeholder="Email" />
+        <input name="number" type="text" class="feedback-input" placeholder="Phone Number" />
+        <textarea name="text" class="feedback-input" placeholder="Message"></textarea>
+        <input type="submit" value="SUBMIT" />
+    </form>
+
+</section>
