--- a/src/app/features/page/Home/home/home.component.scss
+++ b/src/app/features/page/Home/home/home.component.scss
@@ -17,6 +17,12 @@
      height: 0px;
      z-index: -10;
 
+   @media (max-width: 450px) {
+         flex-flow: column wrap;
+         margin-top: -20%; 
+   
+      }
+
  }
 
  .frame-back {
@@ -28,6 +34,14 @@
      margin: -70px auto 0;
      height: 100%;
      z-index: -10;
+
+   @media (max-width: 450px) {
+         flex-flow: column wrap;
+         margin-top: -20%;
+         width: 500px;
+         height: 1000px;
+   
+      }
  }
 
 //Columns
@@ -134,6 +148,8 @@
 .card__background {
    background-size: cover;
    background-position: center;
+   background-color: #FCBD07;
+   
    border-radius: 24px;
    bottom: 0;
    filter: brightness(0.60) saturate(1.2) contrast(0.85);
