--- a/src/app/Shared/footer/footer.component.html
+++ b/src/app/Shared/footer/footer.component.html
@@ -1,5 +1,50 @@
 <section class="footer-section">
-    <br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br>
+    <br>
+    <div class="wrapper-columns">
+    
+        <div class="columns text-center ">
 
+            <div class="column">
+                <figure class="figure">
+                    <div class="max-logo text-center">
+            
+            
+                        <img src="https://rjbkomtzdjbzhdfrqjgm.supabase.co/storage/v1/object/public/prueba%20x2/Onspace%20with%20name.png"
+                            class="figure-img img-fluid rounded"
+                            alt="A generic square placeholder image with rounded corners in a figure.">
+                    </div>
+                </figure>
+            
+            </div>
+    
+            <div class="column">
+                <div class="mini-nav text-center">
+                    <b>
+                    <a href="/home">Home</a> <br>
+                    <a href="/team">Team</a><br>
+                    <a href="/portafolio">Portafolio</a><br>
+                    <a href="/contact">Contact</a>
+                    </b>
+
+                </div>
+            
+
+            </div>
+    
+            
+
+            <div class="column">
+                <b>
+                <p style="font-size:20px; margin: 15% auto;">Lorem ipsum dolor sit amet consectetur adipiscing elit elementum, dictum
+                    porttitor sed morbi laoreet aliquam cras nostra
+                    tincidunt, enim aenean phasellus sapien auctor curae ultrices.</p></b>
+            </div>
+    
+        </div>
+    
+    </div>
+    
+
+   <b> <p class="text-center" style="font-size: 20px;">© Todos los derechos reservados</p></b>
+<br>
 </section>
