--- a/src/app/features/page/Contact/contact/contact.component.scss
+++ b/src/app/features/page/Contact/contact/contact.component.scss
@@ -1,3 +1,51 @@
+ * {
+     font-family: "Arquitecta", sans-serif;
+        margin: 0;
+            padding: 0;
+            -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+ }
+
+ h1 {
+     font-size: 40px;
+ }
+
+ //Waves
+
+ .waves-back {
+     width: 100%;
+     position: fixed;
+     padding-bottom: 178.218%;
+     height: 0px;
+     z-index: -10;
+
+     @media (max-width: 450px) {
+         flex-flow: column wrap;
+         margin-top: -20%;
+
+     }
+
+ }
+
+ .frame-back {
+     width: 100%;
+     position: absolute;
+     left: 0px;
+     top: 0px;
+     overflow: hidden;
+     margin: -70px auto 0;
+     height: 100%;
+     z-index: -10;
+
+     @media (max-width: 450px) {
+         flex-flow: column wrap;
+         margin-top: -20%;
+         width: 500px;
+         height: 1000px;
+
+     }
+ }
+
 //Contact
 
 form {
