--- a/src/app/features/page/Portafolio/portafolio/portafolio.component.html
+++ b/src/app/features/page/Portafolio/portafolio/portafolio.component.html
@@ -1,3 +1,11 @@
+<div class="waves-back">
+
+    <iframe class="frame-back" src="https://streamable.com/e/zxcjcw?autoplay=1&nocontrols=1" frameborder="0"
+        width="100%" height="100%" allowfullscreen allow="autoplay"></iframe>
+
+</div>
+
+
 <section class="portafolio">
     <br>
 
@@ -18,9 +26,9 @@
                 <div class="text-center">
 
 
-                    <img src="https://image.spreadshirtmedia.net/image-server/v1/products/T1599A1PA5076PT10X15Y12D173444457W3575H4290/views/1,width=378,height=378,appearanceId=1,backgroundColor=F2F2F2/bebe-t-rex-kawaii-dinosaurio-regalo.jpg"
+                    <img src="https://rjbkomtzdjbzhdfrqjgm.supabase.co/storage/v1/object/public/prueba%20x2/Onspace%20with%20name.png"
                         class="figure-img img-fluid rounded texte-center"
-                        alt="A generic square placeholder image with rounded corners in a figure.">
+                        alt="A generic square placehol  der image with rounded corners in a figure.">
                 </div>
             </figure>
 
