--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -10,7 +10,7 @@
     <br>
         <div class="wrapper-columns">
         
-            <div class="columns">
+            <div class="columns text-center">
         
                 <div class="column">
                     <p style="font-size:35px;">Lorem ipsum dolor sit amet consectetur adipiscing elit elementum, dictum
@@ -23,14 +23,13 @@
                 </div>
         
                 <div class="column">
-                    <figure class="figure">
                         <div class="text-center">
 
                         
-                        <img src="https://www.lavanguardia.com/files/content_image_mobile_filter/uploads/2016/11/10/5fa2f87913ea9.jpeg" class="figure-img img-fluid rounded"
+                        <img src="https://rjbkomtzdjbzhdfrqjgm.supabase.co/storage/v1/object/public/prueba%20x2/Onspace%20with%20name.png" class="figure-img img-fluid"
                             alt="A generic square placeholder image with rounded corners in a figure.">
                             </div>
-                    </figure>
+                   
 
                 </div>
         
