--- a/src/app/features/page/Portafolio/portafolio/portafolio.component.html
+++ b/src/app/features/page/Portafolio/portafolio/portafolio.component.html
@@ -1,9 +1,9 @@
-<div class="waves-back">
+<!-- <div class="waves-back">
 
     <iframe class="frame-back" src="https://streamable.com/e/zxcjcw?autoplay=1&nocontrols=1" frameborder="0"
         width="100%" height="100%" allowfullscreen allow="autoplay"></iframe>
 
-</div>
+</div> -->
 
 
 <section class="portafolio">
@@ -11,19 +11,26 @@
 
 <div class="wrapper-columns">
 
-    <div class="columns">
+    <div class="columns text-center">
 
         <div class="column">
-            <br><br><br><br><br>
+            <br><br><br><br>
             <h1 style="font-size: 70px;">Portafolio</h1>
             <br><br>
             
 
         </div>
+        <div class="column">
+         
+            <h1 style="font-size: 70px;"></h1>
+         
+        
+        
+        </div>
 
         <div class="column">
             <figure class="figure">
-                <div class="text-center">
+                <div class="max-logo text-center">
 
 
                     <img src="https://rjbkomtzdjbzhdfrqjgm.supabase.co/storage/v1/object/public/prueba%20x2/Onspace%20with%20name.png"
