--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -13,13 +13,7 @@
             <div class="columns text-center">
         
                 <div class="column">
-                    <p style="font-size:35px;">Lorem ipsum dolor sit amet consectetur adipiscing elit elementum, dictum
-                        porttitor sed morbi laoreet aliquam cras nostra
-                        tincidunt, enim aenean phasellus sapien auctor curae ultrices. Orci cubilia rutrum id commodo hendrerit
-                        enim sagittis
-                        neque nullam, vehicula leo pharetra potenti metus diam vel maecenas, netus senectus feugiat sollicitudin
-                        blandit
-                        ullamcorper fermentdum curabitur</p>
+                    <p style="font-size:50px;color:#FCBD07">¿Listo para <br> expandir tu marca <br> como nunca antes? <br> ¡Hagámoslo!</p>
                 </div>
         
                 <div class="column">
@@ -120,19 +114,16 @@
 <section class="ours">
     
 
-        <br><h1 class="text-center">Nosotros</h1> <br>
+        <br><h1 class="text-center">Quienes somos?</h1> <br>
 
-        <p class="text-center text-ours" >Lorem ipsum dolor sit amet consectetur adipiscing elit bibendum, augue condimentum ultrices a malesuada volutpat duis
-        mus curae, suspendisse scelerisque integer fermentum ligula potenti rutrum. Eros vel neque ornare egestas potenti purus
-        sollicitudin accumsan ad, nibh pharetra habitant parturient aliquam massa aptent est. Suspendisse eget lacinia non
-        nullam eros elementum vel posuere, natoque aenean libero volutpat ultricies duis.</p>
-        <br>
-        <p class="text-center text-ours" >Lorem ipsum dolor sit amet consectetur adipiscing elit bibendum, augue
-            condimentum ultrices a malesuada volutpat duis
-            mus curae, suspendisse scelerisque integer fermentum ligula potenti rutrum. Eros vel neque ornare egestas potenti
-            purus
-            sollicitudin accumsan ad, nibh pharetra habitant parturient aliquam massa aptent est. Suspendisse eget lacinia non
-            nullam eros elementum vel posuere, natoque aenean libero volutpat ultricies duis.</p>
+        <p class="text-center text-ours" >¡Es un placer saludarte! Somos Onspace, una agencia de publicidad especializada en potencializar marcas tanto en el
+        ámbito físico como digital, con el objetivo de mejorar su presencia y apariencia para lograr su posicionamiento en el
+        mercado. <br> <br>
+        Creemos en el gran poder de la publicidad y el marketing para transformar marcas y negocios. Por eso, nos esforzamos por
+        trabajar de manera cercana con nuestros clientes para entender sus necesidades y objetivos, y así crear estrategias que
+        generen impacto y resultados. <br> <br>
+        Si nos pides que nos describamos con tres palabras, usaríamos: "pasión", "creatividad" e "integridad", valores que
+        consideramos clave para ofrecer servicios auténticos y eficientes.</p>
             <br>
 
 </section>
