create form component and add img logo

--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -17,10 +17,10 @@
                 </div>
         
                 <div class="column">
-                        <div class="text-center">
+                        <div class=" max-logo text-center">
 
                         
-                        <img src="https://rjbkomtzdjbzhdfrqjgm.supabase.co/storage/v1/object/public/prueba%20x2/Onspace%20with%20name.png" class="figure-img img-fluid"
+                        <img src="./assets/img/Onspace_name.png" class="figure-img img-fluid"
                             alt="A generic square placeholder image with rounded corners in a figure.">
                             </div>
                    
