--- a/src/app/Shared/footer/footer.component.html
+++ b/src/app/Shared/footer/footer.component.html
@@ -7,7 +7,7 @@
             <div class="column">
                 <figure class="figure">
                     <div class="max-logo text-center">
-                        <img src="https://rjbkomtzdjbzhdfrqjgm.supabase.co/storage/v1/object/public/prueba%20x2/Onspace%20with%20name.png"
+                        <img src="./assets/img/Onspace_name.png"
                             class="figure-img img-fluid rounded"
                             alt="A generic square placeholder image with rounded corners in a figure.">
                     </div>
