--- a/src/app/features/page/Home/home/home.component.scss
+++ b/src/app/features/page/Home/home/home.component.scss
@@ -8,6 +8,17 @@
    font-size: 40px;
  }
 
+ //logo
+
+ .max-logo {
+    margin: 5% auto;
+ }
+
+ img {
+    width: 340px;
+    height: 250px;
+ }
+
  //Waves
 
  .waves-back {
