--- a/src/app/features/page/Portafolio/portafolio/portafolio.component.html
+++ b/src/app/features/page/Portafolio/portafolio/portafolio.component.html
@@ -33,7 +33,7 @@
                 <div class="max-logo text-center">
 
 
-                    <img src="https://rjbkomtzdjbzhdfrqjgm.supabase.co/storage/v1/object/public/prueba%20x2/Onspace%20with%20name.png"
+                    <img src="./assets/img/Onspace_name.png"
                         class="figure-img img-fluid rounded texte-center"
                         alt="A generic square placehol  der image with rounded corners in a figure.">
                 </div>
