change not-found and team component

--- a/src/app/features/page/Team/team/team.component.html
+++ b/src/app/features/page/Team/team/team.component.html
@@ -3,3 +3,5 @@
     <iframe class="frame" src="https://streamable.com/e/zxcjcw?autoplay=1&nocontrols=1" frameborder="0" width="100%"
         height="100%" allowfullscreen allow="autoplay"></iframe>
 </div> -->
+
+<img src="./assets/img/PROXIMAMENTE.png" class="img-fluid not-found" alt="...">
