--- a/src/app/Shared/not-found/not-found.component.html
+++ b/src/app/Shared/not-found/not-found.component.html
@@ -1,4 +1,1 @@
-<div style="width:100%;height:0px;position:relative;padding-bottom:66.667%;"><iframe
-        src="https://streamable.com/e/c4p24n?autoplay=1&nocontrols=1" frameborder="0" width="100%" height="100%"
-        allowfullscreen allow="autoplay"
-        style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+<img src="./assets/img/not-found.jpg" class="img-fluid not-found" alt="...">
