Service Form Finish

--- a/src/app/features/page/Contact/contact/contact.component.html
+++ b/src/app/features/page/Contact/contact/contact.component.html
@@ -14,7 +14,7 @@
     <form [formGroup]="ContactForm">
         <input name="name" type="text" class="feedback-input" placeholder="Name" #name/>
         <input name="email" type="text" class="feedback-input" placeholder="Email" #email/>
-        <input name="number" type="text" class="feedback-input" placeholder="Phone Number" #number/>
+        <input name="number" type="number" class="feedback-input" placeholder="Phone Number" #number/>
         <textarea name="message" type="text" class="feedback-input" placeholder="Message" #message></textarea>
         <input type="submit" value="SUBMIT" (click)="sendEmail(name.value, email.value, number.value, message.value)"/>
     </form>
