--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -1,9 +1,9 @@
-<div class="waves-back" >
+<!-- <div class="waves-back" >
 
     <iframe class="frame-back" src="https://streamable.com/e/zxcjcw?autoplay=1&nocontrols=1" frameborder="0" width="100%"
         height="100%" allowfullscreen allow="autoplay"></iframe>
 
-        </div>
+        </div> -->
 
 
 <section class="home-section">
