--- a/src/app/Shared/not-found/not-found.component.html
+++ b/src/app/Shared/not-found/not-found.component.html
@@ -1,1 +1,1 @@
-<img src="./assets/img/not-found.jpg" class="img-fluid not-found" alt="...">
+<img src="./assets/img/404.png" class="img-fluid not-found" alt="...">
