--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -5,6 +5,11 @@
 
         </div> -->
 
+<div class="waves">
+    <div class="wave">
+
+    </div>
+</div>
 
 <section class="home-section">
     <br>
