--- a/src/app/features/page/Team/team/team.component.html
+++ b/src/app/features/page/Team/team/team.component.html
@@ -4,4 +4,17 @@
         height="100%" allowfullscreen allow="autoplay"></iframe>
 </div> -->
 
-<img src="./assets/img/PROXIMAMENTE.png" class="img-fluid not-found" alt="...">
+<!-- <img src="./assets/img/PROXIMAMENTE.png" class="img-fluid not-found" alt="..."> -->
+
+<div class="container">
+
+    <div class="waves">
+        <br><br> <br>
+        <br>
+        <div class="wave">
+    
+        </div>
+    </div>
+</div>
+
+
