--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -5,28 +5,32 @@
 
         </div> -->
 
-<div class="waves">
-    <div class="wave">
 
-    </div>
-</div>
 
 <section class="home-section">
-    <br>
+    <br> <br>
         <div class="wrapper-columns">
         
-            <div class="columns text-center">
+            <div class="columns">
         
                 <div class="column">
-                    <p style="font-size:50px;color:#FCBD07">¿Listo para <br> expandir tu marca <br> como nunca antes? <br> ¡Hagámoslo!</p>
+                <div class="slider">
+                    <div class="caption">
+                        ¿LISTO PA'
+                        <div class="text-box">
+                            <div>EXPANDIR</div>
+                            <div>CRECER</div>
+                            <div>INNOVAR</div>
+                        </div> <br>
+                        TU MARCA COMO <br> NUNCA ANTES? <br> ¡Hagámoslo!
+                    </div>
+                </div>
                 </div>
         
                 <div class="column">
-                        <div class=" max-logo text-center">
-
-                        
-                        <img src="./assets/img/Onspace_name.png" class="figure-img img-fluid"
-                            alt="A generic square placeholder image with rounded corners in a figure.">
+                        <div class=" max-logo r">   
+                        <img src="./assets/img/Onspace_wave.png" class="img-fluid"
+                            alt="Onspace">
                             </div>
                    
 
@@ -35,8 +39,19 @@
             </div>
         
         </div>
+<br>
+        <div class="container">
+            <div class="waves">       
+                <div class="wave">
+
+                </div>
+            </div>
+        </div>
+
 </section>
-<br><br>
+
+
+<br><br> <br><br> <br><br><br> <br> <br><br><br><br> <br><br><br>
 
 <section class="services-section">
 
