--- a/src/app/Shared/header/header.component.scss
+++ b/src/app/Shared/header/header.component.scss
@@ -28,7 +28,7 @@ nav a {
     z-index: 2;
     text-decoration: none;
     text-align: center;
-    color: black;
+    color: white;
     cursor: pointer;
     width: 100px;
 
