--- a/src/app/Shared/header/header.component.html
+++ b/src/app/Shared/header/header.component.html
@@ -3,10 +3,11 @@
 
    
 
-
         <div class="row justify-content-center">
             
+            
             <nav class="text-center">
+                <br>
                 <a class="nav-item" href="/home">Home</a> 
                 <a class="nav-item" href="/team">Team</a>
                 <a class="nav-item" href="/portafolio">Portafolio</a>
@@ -15,5 +16,16 @@
             
 
         </div>
+        <div class="container">
+        
+            <div class="waves">
+                <br><br> <br>
+                <br>
+                <div class="wave">
+        
+                </div>
+            </div>
+        </div>
+
 
 
