--- a/src/app/Shared/header/header.component.scss
+++ b/src/app/Shared/header/header.component.scss
@@ -17,12 +17,12 @@
 
 nav{
     background-color: #1D95D3;
+    position: relative;
 }
 
 nav a {
     line-height: 50px;
-    height: 100%;
-    font-size: 20px;
+    font-size: 25px;
     display: inline-block;
     position: relative;
     z-index: 2;
@@ -35,20 +35,35 @@ nav a {
     @media(max-width: 450px) {
             flex-flow: column wrap;
             width: 90px;
+            font-size: 23px;
         }
 }
 
 
 
 
+//Waves
 
+.waves {
 
-h1 {
-    text-align: center;
-    margin: 40px 0 40px;
-    text-align: center;
-    font-size: 30px;
-    color: #000000;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background-image: url('/./assets/img/wave.png');
+    background-size: 1000px 100px;
+    animation: wave 3s linear infinite;
 }
 
+
+
+@keyframes wave {
+    0% {
+        background-position: 0;
+    }
+
+    100% {
+        background-position: 1000px;
+    }
+}
 
